--- a/Scripts-Data-Exposer-FS.vcxproj
+++ b/Scripts-Data-Exposer-FS.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)lib;$(LibraryPath);$(SolutionDir)lib/lua5.1.lib;</LibraryPath>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -143,6 +143,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);$(SolutionDir)lib/lua5.1.lib;</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -186,7 +187,12 @@
     <ClInclude Include="game\OtherHooks.h" />
     <ClInclude Include="game\ProcessData.h" />
     <ClInclude Include="game\ProcessStructs.h" />
+    <ClInclude Include="include\lauxlib.h" />
     <ClInclude Include="include\Logger.h" />
+    <ClInclude Include="include\lua.h" />
+    <ClInclude Include="include\lua.hpp" />
+    <ClInclude Include="include\luaconf.h" />
+    <ClInclude Include="include\lualib.h" />
     <ClInclude Include="include\mem\aligned_alloc.h" />
     <ClInclude Include="include\mem\arch.h" />
     <ClInclude Include="include\mem\bitwise_enum.h" />
@@ -213,6 +219,7 @@
     <ClInclude Include="include\mem\utils.h" />
     <ClInclude Include="include\MinHook.h" />
     <ClInclude Include="include\PointerChain.h" />
+    <ClInclude Include="include\SimpleIni.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
